k8s/infrastructure/network/gateway/gw-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  namespace: gateway
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 10.1.20.112
  listeners:
    - protocol: HTTPS
      port: 443
      name: https-gateway
      hostname: "*.home.eudald.gr"
      tls:
        certificateRefs:
          - kind: Secret
            name: cert-eudald
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTPS
      port: 443
      name: https-domain-gateway
      hostname: home.eudald.gr
      tls:
        certificateRefs:
          - kind: Secret
            name: cert-eudald
    - protocol: HTTP
      port: 80
      name: http-gateway
      hostname: "*.home.eudald.gr"
      allowedRoutes:
        namespaces:
          from: All
