k8s/infrastructure/network/gateway/gw-tls-passthrough.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tls-passthrough
  namespace: gateway
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 10.1.20.113
  listeners:
    - protocol: TLS
      port: 443
      name: omada
      hostname: "omada.home.eudald.gr"
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
    - protocol: TCP
      port: 29811
      name: omada-mgr-v1
      allowedRoutes:
        namespaces:
          from: All
    - protocol: TCP
      port: 29812
      name: omada-adopt-v1
      allowedRoutes:
        namespaces:
          from: All
    - protocol: TCP
      port: 29813
      name: omada-upgrade-v1
      allowedRoutes:
        namespaces:
          from: All
    - protocol: TCP
      port: 29814
      name: omada-mgr-v2
      allowedRoutes:
        namespaces:
          from: All
    - protocol: TCP
      port: 29815
      name: omada-transfer-v2
      allowedRoutes:
        namespaces:
          from: All
    - protocol: TCP
      port: 29816
      name: omada-rtty
      allowedRoutes:
        namespaces:
          from: All
    - protocol: TCP
      port: 29817
      name: omada-device-monitor
      allowedRoutes:
        namespaces:
          from: All
    - protocol: UDP
      port: 29810
      name: omada-discovery
      allowedRoutes:
        namespaces:
          from: All
    - protocol: UDP
      port: 19810
      name: omada-management
      allowedRoutes:
        namespaces:
          from: All
    - protocol: UDP
      port: 27001
      name: omada-app-discovery
      allowedRoutes:
        namespaces:
          from: All
